5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1721_3036.log
== TEST (2019-05-02 19:16:24) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:16:41) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif (x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif (x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:16:54) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:16:56) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:17:31) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:17:48) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:50) 
-- CODE:
x=float(input("digite um numero: "))
if (x<=-1) or (x>=1):
	print(round((x, 2))
elif(x>-1) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print=2

-- ERROR:
File "XXXX", line 4
    elif(x>-1) and (x<0) or (0<x) and (x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:17) 
-- CODE:
x=float(input("digite um numero: "))
if(x<=-1) or (x>=1):
	print(round(x,2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x=0):
	print(2)
-- ERROR:
File "XXXX", line 6
    elif(x=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:25) 
-- CODE:
x=float(input("digite um numero: "))
if(x<=-1) or (x>=1):
	print(round(x,2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:33) 
-- CODE:
x=float(input("digite um numero: "))
if(x<=-1) or (x>=1):
	print(round(x,2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:52) 
-- CODE:
x=float(input("digite um numero: "))
if(x<=-1) or (x>=1):
	print(round(x,2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:24:07) 
-- CODE:
x=float(input("digite um numero: "))
if(x<=-1) or (x>=1):
	print(round(x,2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(1)
elif(x==0):
	print(2)
-- EXECUTION TIME:
0.203336
-- TEST CASE 1:
---- input:
-0.59
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
0.99
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
-1.01
---- user output:
-1.01
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
